platform/mcs/db-studios-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: db-studio-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "60"
    nginx.ingress.kubernetes.io/enable-websocket: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"

spec:
  ingressClassName: nginx
  rules:
    - host: iam-db.gingersociety.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: iam-db-studio-service
                port:
                  number: 80

    - host: metadata-db.gingersociety.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: metadata-db-studio-service
                port:
                  number: 80
